update comparative paper

--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
@@ -1,7 +1,7 @@
 ---
-title: 'The Weirdest Causal Inferences in the World: Measurement Error Bias in Comparative Cultural Research'
+title: 'The Weirdest Causal Inferences: Why Comparative Cultural Research Requires a Causal Understanding of Measurement Error Bias'
 abstract: |
-  The human sciences, like all sciences, should seek generalisation where generalisations may be found. For this reason, and for ethical considerations, it is desirable to sample more broadly than 'Western, Educated, Industrialised, Rich, and Democratic' (WEIRD) societies. However, restriction of the target population is sometimes necessary; for example, young children should not be recruited into studies on elderly care. Under which conditions is unrestricted sampling desirable or undesirable? Here, we use causal diagrams to clarify the structural features of measurement error bias and target population restriction bias in comparative cultural research. We define any study that exhibits such biases, or other biases, as **weird** (**w**rongly **e**stimated inferences due to **i**nappropriate **r**estriction and **d**istortion). We explain why the first step in comparative study design is to mitigate 'weirdness.' We discuss the fundamental challenges and explain how workflows for causal inference offer the preflight checklists needed for ambitious, effective, and safe comparative cultural research.
+  The human sciences, like all sciences, should seek generalisations where generalisations may be found. For ethical and scientific reasons, it is desirable to sample more broadly than ‘Western, Educated, Industrialised, Rich, and Democratic’ (WEIRD) societies. However, restricting the target population is sometimes necessary; for example, young children should not be recruited into studies on elderly care. Under which conditions is unrestricted sampling desirable or undesirable? Here, we use causal diagrams to clarify the structural features of measurement error bias and target population restriction bias in comparative cultural research. We define any study that exhibits such biases, or other biases, as **weird** (**w**rongly **e**stimated inferences due to **i**nappropriate **r**estriction and **d**istortion).  We explain why the first step in comparative study design is to mitigate 'weirdness.' We discuss the fundamental challenges and explain how workflows for causal inference provide the preflight checklists needed for ambitious, effective, and safe comparative cultural research.
 
   **KEYWORDS**: *Causal Inference*; *Comparative*; *Cross-Cultural*; *DAGs*; *Experiments*; *Longitudinal*;  *Measurement Error Bias**; **Selection Bias*; *Single World Intervention Graphs*, *SWIGs*, *Target Validity*; *WEIRD*
 author: 
@@ -104,33 +104,34 @@ Human scientists ask and answer questions. To anchor answers in facts, we collec
 
 Most publishing human scientists work in what Joseph Henrich, Steven Heine, and Ara Norenzayan have termed 'WEIRD' societies: 'Western, Educated, Industrialised, Rich, and Democratic Societies' [@henrich2010weirdest]. Unsurprisingly, WEIRD samples are over-represented in human science datasets [@sears1986college; @arnett2008neglected]. Henrich et al. illustrate how WEIRD samples differ from non-WEIRD samples in areas such as spatial cognition and perceptions of fairness, while showing continuities in basic emotion recognition, positive self-views, and motivation to punish anti-social behaviour. Because science seeks generalisation wherever it can, Henrich et al. urge that sampling from non-WEIRD populations is desirable.
 
-Recently, a host of institutional diversity and inclusion initiatives have been developed that commend researchers to obtain data from global samples. In my view, the motivation for these mission statements is ethically laudable. The injunction for a broader science of humanity also accords with institutional missions. For example, the scientific mission of the American Psychological Association (APA) is 'to promote the advancement, communication, and application of psychological science and knowledge to benefit society and improve lives.' The APA does not state that it wants to understand and benefit only North Atlantic Societies.[^1] It is therefore tempting to use such a mission statement as an ideal by which to evaluate the samples used in human scientific research.
+Recently, a host of institutional diversity and inclusion initiatives have been developed that commend researchers to obtain data from global samples. In my view, the motivation for these mission statements is ethically laudable. The injunction for a broader science of humanity also accords with institutional missions. For example, the scientific mission of the American Psychological Association (APA) is 'to promote the advancement, communication, and application of psychological science and knowledge to benefit society and improve lives.' The APA does not state that it wants to understand and benefit only North Atlantic Societies (https://www.apa.org/pubs/authors/equity-diversity-inclusion, accessed March 2024). It is therefore tempting to use such a mission statement as an ideal by which to evaluate the samples used in human scientific research.
 
-[^1]: https://www.apa.org/pubs/authors/equity-diversity-inclusion
+https://www.apa.org/pubs/authors/equity-diversity-inclusion
 
-Suppose we agree that promoting a globally diverse science makes ethical sense. Does the sampling of globally diverse populations always advance this ideal? It is easy to find examples in which restricting our source population makes better scientific sense. Suppose we are interested in the psychological effects of restorative justice among victims of violent crime. Here, it would make little scientific sense to sample from a population that has not experienced violent crime. Nor would it make ethical sense. The scientific question, which may have important ethical implications, is not served by casting a wider net. Suppose our interest were to investigate the health effects of calorie restriction. It might be unethical to include children or the elderly. It makes little sense to investigate the psychological impact of vasectomy in biological females or hysterectomy in biological males.
+Suppose we agree that promoting a globally diverse science makes ethical sense. Does the sampling of globally diverse populations always advance this ideal? It is easy to find examples in which restricting our source population makes better scientific sense. Suppose we are interested in the psychological effects of restorative justice among victims of violent crime. Here, it would make little scientific sense to sample from a population that has not experienced violent crime. Nor would it make ethical sense. The scientific question, which may have important ethical implications, is not served by casting a wider net. Suppose we want to investigate the health effects of calorie restriction. It might be unethical to include children or the elderly. It makes little sense to investigate the psychological impact of vasectomy in biological females or hysterectomy in biological males.
 
 In the cases we just considered, the scientific questions pertained to a sub-sample of the human population and so could be sensibly restricted (refer also to @gachter2010, @machery2010). However, even for questions that relate to all of humanity, sampling from all of humanity might be undesirable. For example, if we were interested in the effects of a vaccine on disease, sampling from one population might be as good as sampling from all. Sampling from one population might spare time and expense, which come with opportunity costs. We might conclude that sampling universally, where unnecessary, is wasteful and unethical. 
 
 We might agree with our mission statements in judging that ethical aspirations must guide research at every phase. More fundamentally, we cannot assess the bandwidth of human diversity from the armchair, without empirical study, and this is a motivation to investigate. Yet, mistaking our aspirations for sampling directives risks wasteful science. Because waste carries opportunity costs, wasteful science is unethical science.
 
-I present these examples to remind ourselves of the importance of addressing questions of sampling in relation to its context.
+I present these examples to remind ourselves of the importance of addressing questions of sampling in relation the scientific question at hand.
 
-During the past twenty years, causal data science, also known as 'causal inference' or 'CI', has enabled tremendous clarity for questions of research design and analysis [@richardson2014causal]. Here, we examine how workflows developed from causal inference clarify threats and opportunities for comparative human research. Put differently, causal inference helps us to clarify the assumptions under which restriction is desirable and when it is not. Not all questions are causal, of course. However, because manifest associations in a dataset may not be evidence of *association* in the world, even those who seek descriptive understanding benefit from causal inferential workflows [@vansteelandt2022a].
+During the past twenty years, causal data science, also known as 'causal inference' or 'CI', has enabled tremendous clarity for questions of research design and analysis [@richardson2014causal]. Here, we examine how the workflows developed for causal inference clarify threats and opportunities for causal inference in comparative human research. These workflows require that we state our causal question in terms of well-defined counterfactual quantities, state the population of interest, and evaluate assumptions under which it is possible to obtain valid quantitative estimates of the counterfactual quantities we seek from data.  Application of these these workflows to comparative questions enable us to clarify when comparative research is possible, and also whether it is desirable. Not all questions are causal, of course. However, because manifest associations in a dataset may not be evidence of *association* in the world, even those who seek comparative descriptive understanding may benefit from causal inference workflows [@vansteelandt2022a].
 
-In the remainder of the introduction, I review causal directed acyclic graphs (causal DAGs). Readers familiar with causal diagrams may skip this section. Because causal diagrams encode causal assumptions, we will use the terms 'structural' and 'causal' synonymously. I encourage readers unfamiliar with causal directed acyclic graphs to develop familiarity before proceeding: [@hernan2024WHATIF, chapter 6; @neal2020introduction; @mcelreath2020, chapters 5, 6; @pearl2009a; @barrett2021; @bulbulia2023].
+In the remainder of the introduction, I review causal directed acyclic graphs (causal DAGs). Readers familiar with causal directed acyclic graphs may skip this section. I encourage readers unfamiliar with causal directed acyclic graphs to develop familiarity before proceeding: [@hernan2024WHATIF, chapter 6; @neal2020introduction; @mcelreath2020, chapters 5, 6; @pearl2009a; @barrett2021; @bulbulia2023]. Because directed acyclic graphs encode causal assumptions, we will use the terms 'structural' and 'causal' synonymously.
 
 [Part 1](#id-sec-1) uses causal diagrams to clarify five structural features of measurement-error bias. Understanding measurement error bias is essential in all research, especially in comparative human science, where it casts a long shadow.
 
-[Part 2](#id-sec-2) examines structural sources of bias arising from attrition and non-response, also known as 'right-censoring' or simply 'censoring'. Censoring may lead to restriction of the sample population at baseline. If the sample population at baseline is the target sample, censoring may lead to bias.
+[Part 2](#id-sec-2) examines structural sources of bias arising from attrition and non-response, also known as 'right-censoring' or simply 'censoring'. Censoring may lead to restriction of the target population at baseline. If the sample population at baseline is meant to be the target population, censoring at baseline may lead to bias.
 
-[Part 3](#id-sec-3) considers biases that arise at the start of a study when there is a mismatch between the sample population and the target population. When there is restriction of the target population in the sample population at baseline, this may bias results. I focus on structural threats to inference when the sample population is (1) too restrictive (for example, too WEIRD) and (2) insufficiently restrictive (WEIRD sampling leads to bias). Here, we discover that population-restriction biases are formally equivalent to measurement error bias.
+[Part 3](#id-sec-3) addresses biases that arise at the start of a study when there is a mismatch between the sample population and the target population. When the target population is restricted in the sample population at baseline, results may be biased. I focus on structural threats to inference when the sample population is (1) too restrictive (e.g., too WEIRD) and (2) insufficiently restrictive (leading to bias from WEIRD sampling). We find that population-restriction biases are formally equivalent to certain measurement error biases. This structural parallel is crucial because it shows that many biases in comparative research can be treated as measurement error biases. As these biases are structural—causal in nature—they cannot be assessed using the statistical estimation methods typically employed by comparative researchers.
 
-[Part 4](#id-sec-4) uses Single World Intervention Graphs (SWIGs) to clarify ambiguities that arise when using causal directed acyclic graphs to address population-restriction and measurement-error biases that do not arise from confounding biases. 
+[Part 4](#id-sec-4) uses Single World Intervention Graphs (SWIGs) to enhance understanding of measurement-error bias, which is not easily conveyed through causal directed acyclic graphs (DAGs). Causal DAGs are designed to evaluate assumptions of 'no unmeasured confounding'. Consequently, they do not fully elucidate population-restriction and measurement-error biases that do not stem from confounding. Although SWIGs are also built to evaluate 'no unmeasured confounding', they represent counterfactual dependencies directly on a graph. By placing the measurements—or 'reporters'—of latent realities we aim to quantify, along with the variables that perturb these reporters so that the reported quantities differ from the latent realities, we can advance the structural understanding of measurement problems. This approach better diagnoses threats to comparative human science and elucidates their remedies.
 
-The importance of causal inference for comparative research has been discussed in several recent studies [@deffner2022; @bulbulia2022]. Here, I focus on challenges arising from structural features of (1) measurement error bias, (2) target population restriction bias from censoring, and (3) target population restriction bias at baseline. Causal directed acyclic graphs clarify these recurring structural motifs of measurement error bias. Understanding structural commonalities in these biases equips investigators to better plan their research.
+The importance of causal inference for comparative research has been highlighted in several recent studies [@deffner2022; @bulbulia2022]. In this paper, I focus on challenges arising from structural features of (1) measurement error bias, (2) target population restriction bias from censoring, and (3) target population restriction bias at a study's baseline. I clarify that the basis of these biases is causal, not statistical, by demonstrating their roots in measurement error bias. This understanding is essential because comparative researchers often rely on statistical methods, such as configurable scalar and metric invariance, to address measurement issues. However, if the problems are causal, such methods are inadequate. They fail to clarify the dependencies between reality, its measurements, and the contextual and cultural features that modify the effects of reality on its measurements [@vanderweele2022; @vanderweele2022a; @vanderweele2022b]. 
 
-We begin with a brief overview of causal inference, causal diagrams, and our terminology.
+
+We begin with a brief overview of causal inference, causal directed acyclic graphs (causal DAGs), and our terminology.
 
 ### What is Causality?
 
