--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -1631,11 +1631,11 @@ matching. However, special estimators may be constructed (refer to
 Robins (\citeproc{ref-robins1986}{1986}); Robins \emph{et al.}
 (\citeproc{ref-robins2004effects}{2004}); Van Der Laan and Rose
 (\citeproc{ref-vanderlaan2011}{2011}); Dı́az \emph{et al.}
-(\citeproc{ref-diaz2021nonparametric}{2021})). Because we are interested
-in identification, we shall review these estimators (for recent reviews,
-refer to Hernan and Robins (\citeproc{ref-hernan2024WHATIF}{2024});
-Chatton \emph{et al.} (\citeproc{ref-chatton2020}{2020}); Van Der Laan
-and Rose (\citeproc{ref-vanderlaan2018}{2018}); Chatton and Rohrer
+(\citeproc{ref-diaz2021nonparametric}{2021})). For recent reviews of
+special estimators refer to Hernan and Robins
+(\citeproc{ref-hernan2024WHATIF}{2024}); Chatton \emph{et al.}
+(\citeproc{ref-chatton2020}{2020}); Van Der Laan and Rose
+(\citeproc{ref-vanderlaan2018}{2018}); Chatton and Rohrer
 (\citeproc{ref-chatton2024causal}{2024})).
 
 \subsubsection{\texorpdfstring{Time-Varying Confounding \emph{without}
@@ -1643,51 +1643,42 @@ Treatment-Confounder
 Feedback}{Time-Varying Confounding without Treatment-Confounder Feedback}}\label{time-varying-confounding-without-treatment-confounder-feedback}
 
 Consider how we may have time-varying confounding in the absence of
-treatment-confounder feedback. Suppose again that we are interested in
-computing a causal effect estimate for a two-treatment `marriage'
-intervention on `happiness'. We again assume that all variables are
-well-defined, that `marriage' can be intervened upon, that we have
-specified a target population, and that our questions are scientifically
-interesting. We focus on whether the estimands we state can be obtained
-from observational data. Table~\ref{tbl-swigtabledeveloped}
-\(\mathcal{G}_1\) presents a structure with time-varying confounding.
+treatment-confounder feedback. Suppose we are interested in computing a
+causal effect estimate for a two-treatment `marriage' intervention on
+`happiness'. We assume that all variables are well-defined, that
+`marriage' can be intervened upon, that we have specified a target
+population, and that our questions are scientifically interesting. Here,
+we focus on the challenges in addressing certain causal questions in
+which there is time-varying confounding without treatment confounder
+feedback. Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_1\) presents
+such a structure of time-varying confounding.
 
-\(U_{AL}\) denotes an over-confident personality, an unmeasured
-variable, that is causally associated with decisions to marry early and
-with wealth. We do not suppose that \(U_{AL}\) affects happiness.
-Therefore, on this assumption, we should make no adjustment for
-\(U_{AL}\). Note that we could imagine a more plausible confounder --
-\(U_{AA}\) (not on any graph here) -- that relates to decisions to marry
-at each time interval. Candidate confounders might be: `prefers not
-being married', `prefers marriage', `prefers stability', or `prefers
-change'. The structure of the problem would remain the same if as in the
-example we are considering here. There would be time-varying confounding
-without treatment-confounder feedback. However, here, we will keep the
-structure such that it is \(U_{LA}\) that opens a path for confounding.
-This will allow us to use Table~\ref{tbl-swigtabledeveloped}
-\(\mathcal{G}_2\) when considering time-varying treatments in the next
-section.
+Let \(U_{AL}\) denotes an over-confident personality, an unmeasured
+variable that is causally associated with decisions to marry early and
+with income. We do not suppose that \(U_{AL}\) affects happiness. Taken
+in isolation, \(U_{AL}\) is not a confounder.
 
-\(U_{AY}\) denotes a common cause of variables in \(L_2\) and happiness.
-Suppose this is `job status', which affects wealth and happiness. To
-sharpen the confounding problem, we can present it in its minimal form,
-assuming that job status has no effect on baseline marriage rates
-(whether it does or not makes no difference to the structural features
-of the problem). Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_2\)
-presents the confounding structure for this problem. (To declutter, we
-remove the baseline measurement of \(L_0\), which we assume to be
-conditioned on but does not block the hidden variable
-wealth---ultra-wealthy individuals are unemployed, professors with
-status get paid peanuts, etc.---nor does status block the backdoor path
-through over-confidence).
+Let \(L_t\) denote income. Suppose that income affects whether one stays
+married. For example, suppose it takes wealth to divorce. We can sharpen
+focus on risks of time-varying confounding by assuming that income
+itself does not affect happiness. Even with this weaker assumption we
+shall see a problem arises.
 
-Notice that in this example there is no treatment-confounder feedback.
-We do not imagine that marriage affects stated wealth, but only that
-stated wealth affects marriage (perhaps because wealth is a surrogate of
-a latent cause of stated wealth and happiness). To obtain valid causal
-inference for the effect of \(A_2\) on \(Y\), we must adjust for
-\(L_2\). However, \(L_2\) is a collider of \(U_{AL}\) and \(U_{AY}\). In
-this setting, adjusting for \(L_2\) opens the path:
+\(U_{AY}\) denotes a common cause of income, \(L_2\), and of happiness
+at the end of the study, \(Y\). For example, \(U_{AY}\) might denote
+educational opportunities, which by supposition affects both income and
+happiness. Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_2\) presents
+the confounding structure for this problem in its simplest form. To
+declutter, we remove the baseline measurement of \(L_0\), which we
+assume to be measured.
+
+Notice that in this example, there is no treatment-confounder feedback.
+We have not imagined that marriage affects wealth, or even that wealth
+affects happiness. To obtain valid causal inference for the effect of
+\(A_2\) on \(Y\), we must adjust for \(L_2\) {[}otherwise:
+\(A_t\associationred L_t \associationred U_{AL}\associationred Y(a)\){]}.
+However, \(L_2\) is a collider of \(U_{AL}\) and \(U_{AY}\). In this
+setting, adjusting for \(L_2\) opens the path:
 
 \[
 A_1 \associationred U_{AL} \associationred L_2({\mathbf{\tilde{a_1}}})  \associationred U_{AY} \associationred Y({\mathbf{\tilde{a_1}, \tilde{a_2}}})
@@ -1710,36 +1701,38 @@ is, we would need to evaluate at least two Single World Intervention
 Graphs that correspond to the treatment-level we wish to contrast. Note
 further that because there is time-varying confounding, we cannot use
 standard estimators such as multi-level regression or structural
-equation models.
+equation models. Estimation must occur in a stepwise fashion (refer, for
+example to Dı́az \emph{et al.}
+(\citeproc{ref-diaz2021nonparametric}{2021}), Williams and Díaz
+(\citeproc{ref-williams2021}{2021}).{]}
 
 \subsubsection{Confounding Under Dynamic Treatment Strategies (Modified
 Treatment
 Policies)}\label{confounding-under-dynamic-treatment-strategies-modified-treatment-policies}
 
 In a dynamic treatment strategy, or `modified treatment policy,' the
-value at which a treatment is fixed is a function of measured events
-leading up to it.
+value at which a treatment is fixed is a function of events leading up
+to it.
 
 Suppose we were interested in the population average effect of divorce
-on happiness if divorce was only permitted for those with high social
-status.
+on happiness if divorce was only permitted for those with incomes.
 
 This question is easy to ask but deceptively difficult to answer. For
 example, we cannot fit an interaction of time \(\times\) social status
-\(\times\) marriage status because marital status might affect social
-status. Yet even if marriage did not affect social status, as in
+\(\times\) marriage status because marital status might affect personal
+wealth. Yet even if marriage did not affect personal wealth, as in
 Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\), regression would
 not produce valid estimates for the counterfactual question we asked.
 
-To sharpen focus, imagine that we obtained indicators of social status
-at baseline.
+To sharpen focus, imagine that we obtained indicators of wealth at
+baseline.
 
 Suppose we wamt to consider the following fixed treatment strategy:
 
 \(g^\phi(\cdot)\): remain married for at least two additional years:
 
 \[
-A_t^{+}(\mathbf{g^\phi}) = \mathbf{g^\phi}(A_{t}) = \begin{cases} 
+A_t^{+}(\mathbf{g}^\phi) = \mathbf{g}^\phi (A_{t}) = \begin{cases} 
    a_{1} = 1 & \\ 
    a_{2} = 1 &   
 \end{cases}
@@ -1752,29 +1745,31 @@ unmeasured variables and no arrow from \(A_1\) to \(L_2\).
 However, every causal contrast requires a comparison of at least two
 intervention.
 
-We next consider the treatment policy \(g^\lambda(\cdot)\): at each
-measurement interval, divorce only if one's social status is at least
-50\% greater than average and the individual would have divorced in the
-absence of intervention; otherwise, enforce marriage:
+We next consider the treatment policy \(g^{\lambda}(\cdot)\), divorce
+only if one's personal wealth is at least 50\% greater than average and
+one would have divorced in the absence of intervention; otherwise,
+enforce marriage:
 
 \[
-A_t^{+}(\mathbf{g^\lambda}) = \mathbf{g^\lambda}(A_{t}) = \begin{cases} 
+A_t^{+}(\mathbf{g}^{\lambda}) = \mathbf{g}^{\lambda}(A_{t}) = \begin{cases} 
    a_{1} = 0 & \text{if income} > 1.5 \times  \mu_{\text{income}} \& A_1 = 0 \\ 
    a_{2} = 0 & \text{if income} > 1.5 \times  \mu_{\text{income}} \& A_2 = 0 \\ 
-   a_{t}(\mathbf{g}) = 1 & \text{otherwise} 
+   a_{t} = 1 & \text{otherwise} 
 \end{cases}
 \]
 
 Notice that for the treatment policy \(\mathbf{g}^\lambda(\cdot)\),
 treatment is computed as a function of income at both the natural value
-of \(A_t\) and the social status \(L_t\), for \(t = \{1,2\}\).
+of \(A_t\) and of wealth \(L_t\). Again, to declutter our graphs, we
+leave \(L\) at baseline off the graph, noting that adjustment at
+baseline does not change the structure of confounding.
 
-Template Table~\ref{tbl-swigtabledeveloped} (\mathcal{G}\_5) presents
-the confounding structure. To convey the dependence of the fixed node on
-covariate history under treatment, we use Richardson and Robins
+Template Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_5\) presents
+this confounding structure. To convey the dependence of the fixed node
+on covariate history under treatment, we use Richardson and Robins
 (\citeproc{ref-richardson2013}{2013a})`s conventions and draw a dashed
-line ((\rightarrowdottedgreen)) to indicate paths from the variables on
-which the time-varying treatment regime depends to the deterministic
+line (\(\rightarrowdottedgreen\)) to indicate paths from the variables
+on which the time-varying treatment regime depends to the deterministic
 portion of the intervention node. This strategy clarifies that setting
 the treatment level requires information about prior variables,
 including the 'natural value of the treatment' in the absence of any
@@ -1798,23 +1793,29 @@ G-formula}\label{identification-of-dynamic-time-varying-treatment-strategies-usi
 extension of Robins (\citeproc{ref-robins1986}{1986}) dynamic g-formula.
 Essentially, the algorithm can be stated as follows.
 
-First, identify all the variables that influence the outcome
+\textbf{Step 1}: where \(\mathbf{g}(\cdot)\) is a modified treatment
+policy, identify all the variables that influence the outcome
 \(Y(\mathbf{g})\), excluding those that are current or past treatment
 variables or covariates.
 
-Second, for each treatment at time \(t\), check if the treatment is
-independent of the variables identified in step 1, after accounting for
-past covariates and treatments, in each Single World Intervention Graph
-where the treatment values are fixed. This step amounts to removing the
-dotted green arrows from the dynamic Single World Intervention Graph in
-Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_5\), and doing so gives
-us Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\). For each time
+\textbf{Step 2}: For each treatment at time \(t\), check if the
+treatment is independent of the variables identified in \textbf{Step 1},
+after accounting for past covariates and treatments, in each Single
+World Intervention Graph where the treatment values are fixed. This step
+amounts to removing the dotted green arrows from the dynamic Single
+World Intervention Graph in Table~\ref{tbl-swigtabledeveloped}
+\(\mathcal{G}_5\), and doing so gives us
+Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\). For each time
 point, we recover a set of future counterfactual variables that includes
-the outcome under the treat regime under consideration,
-\(Y(\mathbf{\tilde{g}})\) but which also includes other variables that
-the treatment might affect, including future treatments. All backdoor
-paths must be closed to each member of this set of counterfactual
-variables.
+the potential outcome for the treatment regime under consideration,
+\(Y(\mathbf{g})\), but also includes other variables that the treatment
+might affect, including the natural value of future treatments. All
+backdoor paths must be closed to each member of this set of
+counterfactual variables. We call the more stringent assumptions
+required for identification in time-varying treatments (or equivalently
+longitudinal modified treatment policies
+(\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023})): \textbf{strong
+sequential exchangeability}.
 
 Where:
 
@@ -1838,9 +1839,9 @@ Where:
   \(\mathbf{a}^*\).
 \end{enumerate}
 
-Applying the dynamic extended g-formula as follows gives us the
-following sets of future variables (under each specified counterfactual
-treatments) for which the current treatment must be independent.
+Applying Richardson and Robins (\citeproc{ref-richardson2013}{2013a})'s
+dynamic extended g-formula, we obtain the following sets of future
+variables for which each current treatment must be independent:
 
 \[
 \begin{aligned}
@@ -1850,42 +1851,56 @@ treatments) for which the current treatment must be independent.
 \end{aligned}
 \]
 
-Then we check conditional independencies for each treatment. Inspecting
-template Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\) (recall
-this is Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_5\) without the
-green arrows), we discover that thi dynamic treatment strategy is not
-identified. We have the following open backdoor path:
+Having determined which variables must remain conditionally independent
+of each treatment in a sequence of dynamic treatments to be compared, we
+then consider whether strong sequential exchangeability holds. We do
+this by inspecting template Table~\ref{tbl-swigtabledeveloped}
+\(\mathcal{G}_4\) (recall this is Table~\ref{tbl-swigtabledeveloped}
+\(\mathcal{G}_5\) without the dashed green arrows). On inspection of
+\(\mathcal{G}_4\) (the dynamic SWIG without dashed green arrows), we
+discover that this dynamic treatment strategy is not identified because
+we have the following open backdoor path:
 
 \[
-A_1 \associationred L_2(\mathbf{g}) \associationred A_2(\mathbf{g})
+A_1 \associationred U_{AL} \associationred L_2(\mathbf{g})
 \]
 
-We might consider lowering our sights and estimating a fixed treatment
-strategy, or alternatively a less ambitious modified treatment policy.
-For example, if the treatment regime sets individuals to their observed
-treatment values, then the natural value of treatment is equivalent to
-the measured treatment. In this setting, potential outcomes would be
-estimated as a fixed regime with weaker positivity assumptions. For
-example, with a continuous intervention, we must estimate an effect such
-as setting the intervention only if the observed treatment does not
-reach a specific threshold:
+We also have:
 
 \[
-\mathbf{g}^\phi (A_i) = \begin{cases}  \mu_A & \text{if } A_i < \mu_A \\ 
-A_i & \text{otherwise} \end{cases}
+A_1 \associationred U_{AL} \associationred L_2(\mathbf{g}) \associationred A_2(\mathbf{g})
 \]
 
-Which is a weaker intervention than, for example than the following
-intervention:
+Strong sequential exchangeability fails for \(A_1\).
+
+We might consider lowering our sights and estimating a fixed or
+time-varying treatment strategy that can be identified.
+
+Note that certain time-varying treatment strategies impose weaker
+assumptions than time-fixed strategies. For example, with a continuous
+intervention, we might consider intervening only if the observed
+treatment does not reach a specific threshold, such as:
 
 \[
-\mathbf{g}^\lambda (A_i) = \begin{cases}   \mu_A  & \text{if } A_i \neq \mu_A   \\ 
-A_i & \text{otherwise} \end{cases}
+\mathbf{g}^{\phi} (A_i) = \begin{cases}  
+\mu_A & \text{if } A_i < \mu_A \\ 
+A_i & \text{otherwise} 
+\end{cases}
 \]
 
-Whereas \(\mathbf{g}^\lambda\) sets everyone in the population to the
-same treatment level, \(\mathbf{g}^\phi\) sets only those below a
-certain threshold of a fixed level but does not estimate treatment
+This is a weaker intervention than setting everyone whose natural value
+of treatment is above this threshold to precisely the threshold's value:
+
+\[
+\mathbf{g}^{\lambda} (A_i) = \begin{cases}   
+\mu_A & \text{if } A_i \neq \mu_A \\ 
+A_i & \text{otherwise} 
+\end{cases}
+\]
+
+Whereas \(\mathbf{g}^{\lambda}\) sets everyone in the population to the
+same treatment level, \(\mathbf{g}^{\phi}\) sets only those below a
+certain threshold to a fixed level but does not estimate treatment
 effects for those above (\citeproc{ref-hoffman2023}{Hoffman \emph{et
 al.} 2023}). We can also write stochastic treatment functions
 (\citeproc{ref-diaz2021nonparametric}{Dı́az \emph{et al.} 2021};
@@ -1893,38 +1908,41 @@ al.} 2023}). We can also write stochastic treatment functions
 \citeproc{ref-vanderweele2014a}{VanderWeele and Vansteelandt 2014};
 \citeproc{ref-young2014identification}{Young \emph{et al.} 2014}).
 
-Of course, the details of every problem should be developed in relation
-to a scientific context, and whatever practical questions relate to gaps
-in present science. However, causal inference teaches us that the
-questions we ask -- seemingly coherent and tractable questions such as
-whether marriage makes people happy -- require considerable attention to
-make interpretable. When such questions are made interpretable, causal
-inference reveals that answers might elude us, no matter the quality and
-abundance of our data, or whether we randomise interventions. Modest
-treatment functions might be more credible and helpful for many
-scientific and practical questions.
+Of course, the details of every problem must be developed in relation to
+the scientific context and the practical questions that address gaps in
+present science. However, causal inference teaches us that the questions
+we ask---seemingly coherent and tractable questions such as whether
+marriage makes people happy---demand considerable scrutiny to become
+interpretable. When such questions are made interpretable, causal
+inference often reveals that answers may elude us, regardless of the
+quality and abundance of our data, or even if we randomise
+interventions. Modest treatment functions, however, might be more
+credible and useful for many scientific and practical questions. Such
+functions cannot be estimated using the models routinely taught in the
+human sciences, such as multi-level modelling and statistical structural
+equation modelling.
 
 \subsection{Conclusions}\label{id-sec-5}
 
-The interest in causality is ancient. Democritus wrote, `I would rather
-discover one cause than gain the kingdom of Persia'
-(\citeproc{ref-freeman1948ancilla}{Freeman 1948}). Hume provided a
-general account of causality by referencing counterfactuals: `\ldots{}
-where, if the first object had not been, the second never would have
-existed' (\citeproc{ref-hume1902}{Hume 1902}). However, it was not until
-Jerzy Neyman's master's thesis that a quantitative analysis of causality
-was formalised (\citeproc{ref-neyman1923}{Splawa-Neyman 1990}).
-Remarkably, Neyman's work went largely unnoticed until the 1970s, when
-Harvard statistician Donald Rubin formalised what became known as the
-`Rubin Causal Model' (also the Rubin-Neyman Causal Model)
-(\citeproc{ref-holland1986}{Holland 1986};
-\citeproc{ref-rubin1976}{Rubin 1976}).
+Philosophical interests in causality are ancient. Democritus once
+declared, ``I would rather discover one cause than gain the kingdom of
+Persia'' (\citeproc{ref-freeman1948ancilla}{Freeman 1948}). Hume
+provided a general account of causality by referencing counterfactuals:
+``\ldots{} where, if the first object had not been, the second never
+would have existed'' (\citeproc{ref-hume1902}{Hume 1902}). However, it
+was not until Jerzy Neyman's master's thesis that a quantitative
+analysis of causality was formalised
+(\citeproc{ref-neyman1923}{Splawa-Neyman 1990}). Remarkably, Neyman's
+work went largely unnoticed until the 1970s, when Harvard statistician
+Donald Rubin formalised what became known as the `Rubin Causal Model'
+(also the Rubin-Neyman Causal Model) (\citeproc{ref-holland1986}{Holland
+1986}; \citeproc{ref-rubin1976}{Rubin 1976}).
 
 In 1986, Harvard statistician James Robins extended the potential
 outcomes framework to time-varying treatments, laying the foundation for
 powerful new longitudinal data science methods
 (\citeproc{ref-robins1986}{Robins 1986}). Judea Pearl introduced
-directed acyclic graph, making identification problems transparent and
+directed acyclic graphs, making identification problems transparent and
 accessible to non-specialists (\citeproc{ref-pearl1995}{Pearl 1995}).
 Robins and Richardson extended Pearl's graphical models to evaluate
 counterfactual causal contrasts on graphs, building on Robins' earlier
@@ -1956,20 +1974,20 @@ conceptual and mathematical vocabulary within which to express
 disagreements and accumulate progress---a hallmark of a productive
 science.
 
-Although the causal revolution is progressing and gaining momentum in
-certain human sciences, many areas of human science have yet to
-participate and benefit. The necessity for researchers to acquire new
-skills, coupled with the intensive requirement for data collection, has
-significant implications for research design, funding, and the accepted
-pace of scientific publishing. To foster essential changes in causal
-inference education and practice, the human sciences need to shift from
-a predominantly output-focused, correlation-reporting culture to a slow,
-careful, creative culture that promotes retraining and funds time-series
-data collection. Such investments are worthwhile. Much as Darwin's
-theory transformed the biological sciences from speculative taxonomy,
-causal inference will transform the human sciences from butterfly
-collections of correlations to causal inferential sciences capable of
-addressing the causal questions that animate our curiosities.
+Despite the progress and momentum of the causal revolution in certain
+human sciences, many areas have yet to participate and benefit. The
+demands for researchers to acquire new skills, coupled with the
+intensive requirement for data collection, has significant implications
+for research design, funding, and the accepted pace of scientific
+publishing. To foster essential changes in causal inference education
+and practice, the human sciences need to shift from a predominantly
+output-focused, correlation-reporting culture to a slow, careful,
+creative culture that promotes retraining and funds time-series data
+collection. Such investments are worthwhile. Much as Darwin's theory
+transformed the biological sciences from speculative taxonomy, causal
+inference will transform the human sciences from butterfly collections
+of correlations to causal inferential sciences capable of addressing the
+causal questions that animate our curiosities.
 
 \newpage{}
 
@@ -1983,7 +2001,7 @@ to publish it.
 
 \newpage{}
 
-\subsection{Appendix A: Glossary}\label{id-app-a}
+\paragraph{Appendix A: Glossary}\label{id-app-a}
 
 \begin{table}
 
@@ -1999,8 +2017,8 @@ to publish it.
 
 \newpage{}
 
-\subsection{Appendix B On the Clarity of Single World Intervention
-Graphs}\label{id-app-b}
+\subsection{Appendix B Single World Intervention Graphs Eludicate
+Complex Identification Problems}\label{id-app-b}
 
 \begin{table}
 
@@ -2038,60 +2056,61 @@ Intervention Graphs.
 \subsection{Appendix C Richardson and Robin's Extended Dynamic
 G-formula}\label{id-app-c}
 
-Robin's and Richardson's propose an extension of Robins
-(\citeproc{ref-robins1986}{1986}) dynamic g-formula for identifying
-causality under dynamic treatment regimes as follows:
+Richardson and Robins (\citeproc{ref-richardson2013}{2013a}) propose an
+extension of Robins (\citeproc{ref-robins1986}{1986}) dynamic g-formula
+for identifying causality under dynamic treatment regimes as follows.
+Here I reproduce the key details of their identification algorthim. I
+refer readers to Richardson and Robins
+(\citeproc{ref-richardson2013}{2013a}) for the full algorithm and its
+proofs.
 
 First, define the set of counterfactual variables in our dynamic Single
 World Intervention Graph (or Template):
 
-\begin{itemize}
-\tightlist
-\item
-  \(\mathbb{A}^+(\mathbf{g})\): denotes the set of modified treatment
-  variables under a dynamic regime
-\item
-  \(\mathbb{V}(\mathbf{g})\): denotes the set of counterfactual nodes
-  following treatments.
-\item
-  \(\mathbb{W}(\mathbf{g})\): denotes the combined set of all
-  counterfactual variables under a dynamic regime corresponding to
-  Table~\ref{tbl-swigtabledeveloped} \(\mathbf{g}_4\).
-\end{itemize}
+\(\mathbb{A}^+(\mathbf{g})\): denotes the set of modified treatment
+variables under a dynamic regime \(\mathbb{V}(\mathbf{g})\): denotes the
+set of counterfactual nodes following treatments.
+\(\mathbb{W}(\mathbf{g})\): denotes the combined set of all
+counterfactual variables under a dynamic regime corresponding to
+Table~\ref{tbl-swigtabledeveloped} \(\mathbf{G}_4\).
 
-In set notation:
+Richardson and Robins (\citeproc{ref-richardson2013}{2013a}) define this
+set as follows:
 
 \[
 \mathbb{W}(\mathbf{g}) \equiv \mathbb{A}^+(\mathbf{g}) \cup \mathbb{V}(\mathbf{g})
 \]
 
-Next, at each intervention node \(t\), find all ancestors of
-\(Y(\mathbf{g})\) in \(\mathbb{W}(\mathbf{g})\) that are not in the set
-of current or past treatment covariates. In set notation
+Next, at each intervention node \(t\), our task is to find all ancestors
+of \(Y(\mathbf{g})\) in \(\mathbb{W}(\mathbf{g})\) that are not in the
+set of current or past treatment covariates. Richardson and Robins
+(\citeproc{ref-richardson2013}{2013a}) define this set as follows:
 
 \[
-\mathbb{Z}_t(\mathbf{g}) \equiv \text{an}_{\mathcal{G}(\mathbf{g})}(Y(\mathbf{g})) \setminus (\mathbb{L}_k(\mathbf{g}) \cup \mathbb{A}_k(\mathbf{g}) \cup \mathbb{A}^+(\mathbf{g}))
+\mathbb{Z}_t(\mathbf{g}) \equiv \text{an}_{\mathcal{G}(\mathbf{g})}(Y(\mathbf{g})) \setminus (\mathbb{L}_t(\mathbf{g}) \cup \mathbb{A}_t(\mathbf{g}) \cup \mathbb{A}^+(\mathbf{g}))
 \]
 
-Third, map \(\mathbb{Z}\) to a new Single World Intervention Graph
-\(\mathcal{G}(\mathbf{a}^*)\), where the intervention \(\mathbf{a}^*\)
-is a specific value of \(A = a\) assigned under \(f^g(\cdot)\). This new
-dSWIG \(\mathcal{G}(\mathbf{a}^*)\) is simply the original dSWIG
-\(\mathcal{G}(\mathbf{g})\) with the dashed arrows removed. As such, we
-may simply use dSWIG Table~\ref{tbl-swigtabledeveloped}
-\(\mathbf{g}_5\), ignoring the dashed arrows. This graph is identical to
-Table~\ref{tbl-swigtabledeveloped} \(\mathbf{g}_4\)
+Third, our task is to map \(\mathbb{Z}\) to a new Single World
+Intervention Graph \(\mathcal{G}(\mathbf{a}^*)\), where the intervention
+\(\mathbf{a}^*\) is a specific value of \(A = a\) assigned under
+\(f^g(\cdot)\).
 
-Fourth, we ensure conditional independence of the treatment
+This new \texttt{dSWIG} or
+\texttt{dynamic\ Single\ World\ Intervention\ Graph}
+\(\mathcal{G}(\mathbf{a}^*)\) is simply the original dSWIG
+\(\mathcal{G}(\mathbf{g})\) with the dashed arrows removed.
+
+Fourth, we task is to ensure conditional independence of the treatment
 \(A_t = a^*\) with members of the set \(\mathbb{Z}_t\), for all
 \(\mathbf{a}^*\) (fixed nodes) and all time points \(t \in 1...\tau\),
-where \(\tau\) is the end of the study.
+where \(\tau\) is the end of the study. Richardson and Robins
+(\citeproc{ref-richardson2013}{2013a}) define this set as follows:
 
 \[
 \mathbb{Z}_t(\mathbf{a}^*) \coprod I(A_t(\mathbf{a}^*) = a^*_t) \mid \bar{\mathbb{L}}_t(\mathbf{a}^*), \bar{\mathbb{A}}_{t-1}(\mathbf{a}^*) = \bar{\mathbf{a}^*}_{t-1}
 \]
 
-where \(I\) denotes the indicator function:
+where the authors use \(I\) to denote the indicator function:
 
 \[
 I(A_k(\mathbf{a}^*) = a^*_t) = 
@@ -2103,8 +2122,7 @@ I(A_k(\mathbf{a}^*) = a^*_t) =
 
 where:
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
+\begin{itemize}
 \tightlist
 \item
   \textbf{\(\mathbb{Z}_t(\mathbf{a}^*)\)}: denotes the subset of
@@ -2121,11 +2139,12 @@ where:
   \textbf{\(\bar{\mathbb{A}}_{t-1}(\mathbf{a}^*)\)}: denotes the set of
   past treatment variables up to time \(t-1\) under the intervention
   \(\mathbf{a}^*\).
-\end{enumerate}
+\end{itemize}
 
-We apply the dynamic extended g-formula. In the example describe in @
-Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\),
-\(\mathbb{Z}_t(\mathbf{g})\) is given:
+In the example describe in Table~\ref{tbl-swigtabledeveloped}
+\(\mathcal{G}_4\), \(\mathbb{Z}_t(\mathbf{g})\), we apply Richardson and
+Robins (\citeproc{ref-richardson2013}{2013a})'s dynamic extended
+g-formula, and obtain:
 
 \[
 \begin{aligned}
@@ -2135,12 +2154,11 @@ Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\),
 \end{aligned}
 \]
 
-Then we check conditional independencies for each treatment.
-
-If we convert template Table~\ref{tbl-swigtabledeveloped}
-\(\mathcal{G}_5\) by the dynamic time-varying g-formula, we have
-Template Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\), we learn
-the dynamic treatment strategy under consideration is not identified.
+Then we check conditional independencies for each treatment on
+Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\) (which is
+\(\mathcal{G}_5\) without the dashed green arrows). We inspect this
+template and learn the dynamic treatment strategy under consideration is
+not identified.
 
 \newpage{}
 
@@ -2224,6 +2242,13 @@ doi:\href{https://doi.org/10.1177/25152459221106366}{10.1177/25152459221106366}.
 Díaz, I, Williams, N, Hoffman, KL, and Schenck, EJ (2021) Non-parametric
 causal effects based on longitudinal modified treatment policies.
 \emph{Journal of the American Statistical Association}.
+doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
+
+\bibitem[\citeproctext]{ref-diaz2023lmtp}
+Díaz, I, Williams, N, Hoffman, KL, and Schenck, EJ (2023) Nonparametric
+causal effects based on longitudinal modified treatment policies.
+\emph{Journal of the American Statistical Association},
+\textbf{118}(542), 846--857.
 doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
 
 \bibitem[\citeproctext]{ref-diaz2021nonparametric}
