--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
@@ -228,7 +228,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The Weirdest Causal Inferences in the World: Measurement Error Bias in Comparative Cultural Research},
+  pdftitle={The Weirdest Causal Inferences: Why Comparative Cultural Research Requires a Causal Understanding of Measurement Error Bias},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -237,8 +237,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{The Weirdest Causal Inferences in the World: Measurement Error
-Bias in Comparative Cultural Research}
+\title{The Weirdest Causal Inferences: Why Comparative Cultural Research
+Requires a Causal Understanding of Measurement Error Bias}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -251,18 +251,18 @@ Bias in Comparative Cultural Research}
       
 
 
-\date{2024-06-06}
+\date{2024-06-08}
 \begin{document}
 \maketitle
 \begin{abstract}
-The human sciences, like all sciences, should seek generalisation where
-generalisations may be found. For this reason, and for ethical
-considerations, it is desirable to sample more broadly than `Western,
-Educated, Industrialised, Rich, and Democratic' (WEIRD) societies.
-However, restriction of the target population is sometimes necessary;
-for example, young children should not be recruited into studies on
-elderly care. Under which conditions is unrestricted sampling desirable
-or undesirable? Here, we use causal diagrams to clarify the structural
+The human sciences, like all sciences, should seek generalisations where
+generalisations may be found. For ethical and scientific reasons, it is
+desirable to sample more broadly than `Western, Educated,
+Industrialised, Rich, and Democratic' (WEIRD) societies. However,
+restricting the target population is sometimes necessary; for example,
+young children should not be recruited into studies on elderly care.
+Under which conditions is unrestricted sampling desirable or
+undesirable? Here, we use causal diagrams to clarify the structural
 features of measurement error bias and target population restriction
 bias in comparative cultural research. We define any study that exhibits
 such biases, or other biases, as \textbf{weird} (\textbf{w}rongly
@@ -270,7 +270,7 @@ such biases, or other biases, as \textbf{weird} (\textbf{w}rongly
 \textbf{r}estriction and \textbf{d}istortion). We explain why the first
 step in comparative study design is to mitigate `weirdness.' We discuss
 the fundamental challenges and explain how workflows for causal
-inference offer the preflight checklists needed for ambitious,
+inference provide the preflight checklists needed for ambitious,
 effective, and safe comparative cultural research.
 
 \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Comparative};
@@ -308,9 +308,12 @@ mission of the American Psychological Association (APA) is `to promote
 the advancement, communication, and application of psychological science
 and knowledge to benefit society and improve lives.' The APA does not
 state that it wants to understand and benefit only North Atlantic
-Societies.\footnote{https://www.apa.org/pubs/authors/equity-diversity-inclusion}
-It is therefore tempting to use such a mission statement as an ideal by
-which to evaluate the samples used in human scientific research.
+Societies (https://www.apa.org/pubs/authors/equity-diversity-inclusion,
+accessed March 2024). It is therefore tempting to use such a mission
+statement as an ideal by which to evaluate the samples used in human
+scientific research.
+
+https://www.apa.org/pubs/authors/equity-diversity-inclusion
 
 Suppose we agree that promoting a globally diverse science makes ethical
 sense. Does the sampling of globally diverse populations always advance
@@ -320,11 +323,11 @@ the psychological effects of restorative justice among victims of
 violent crime. Here, it would make little scientific sense to sample
 from a population that has not experienced violent crime. Nor would it
 make ethical sense. The scientific question, which may have important
-ethical implications, is not served by casting a wider net. Suppose our
-interest were to investigate the health effects of calorie restriction.
-It might be unethical to include children or the elderly. It makes
-little sense to investigate the psychological impact of vasectomy in
-biological females or hysterectomy in biological males.
+ethical implications, is not served by casting a wider net. Suppose we
+want to investigate the health effects of calorie restriction. It might
+be unethical to include children or the elderly. It makes little sense
+to investigate the psychological impact of vasectomy in biological
+females or hysterectomy in biological males.
 
 In the cases we just considered, the scientific questions pertained to a
 sub-sample of the human population and so could be sensibly restricted
@@ -346,32 +349,40 @@ science. Because waste carries opportunity costs, wasteful science is
 unethical science.
 
 I present these examples to remind ourselves of the importance of
-addressing questions of sampling in relation to its context.
+addressing questions of sampling in relation the scientific question at
+hand.
 
 During the past twenty years, causal data science, also known as `causal
 inference' or `CI', has enabled tremendous clarity for questions of
 research design and analysis
 (\citeproc{ref-richardson2014causal}{Richardson and Rotnitzky 2014}).
-Here, we examine how workflows developed from causal inference clarify
-threats and opportunities for comparative human research. Put
-differently, causal inference helps us to clarify the assumptions under
-which restriction is desirable and when it is not. Not all questions are
+Here, we examine how the workflows developed for causal inference
+clarify threats and opportunities for causal inference in comparative
+human research. These workflows require that we state our causal
+question in terms of well-defined counterfactual quantities, state the
+population of interest, and evaluate assumptions under which it is
+possible to obtain valid quantitative estimates of the counterfactual
+quantities we seek from data. Application of these these workflows to
+comparative questions enable us to clarify when comparative research is
+possible, and also whether it is desirable. Not all questions are
 causal, of course. However, because manifest associations in a dataset
 may not be evidence of \emph{association} in the world, even those who
-seek descriptive understanding benefit from causal inferential workflows
-(\citeproc{ref-vansteelandt2022a}{Vansteelandt and Dukes 2022a}).
+seek comparative descriptive understanding may benefit from causal
+inference workflows (\citeproc{ref-vansteelandt2022a}{Vansteelandt and
+Dukes 2022a}).
 
 In the remainder of the introduction, I review causal directed acyclic
-graphs (causal DAGs). Readers familiar with causal diagrams may skip
-this section. Because causal diagrams encode causal assumptions, we will
-use the terms `structural' and `causal' synonymously. I encourage
-readers unfamiliar with causal directed acyclic graphs to develop
-familiarity before proceeding: (\citeproc{ref-barrett2021}{Barrett
-2021}; \citeproc{ref-bulbulia2023}{Bulbulia 2023};
+graphs (causal DAGs). Readers familiar with causal directed acyclic
+graphs may skip this section. I encourage readers unfamiliar with causal
+directed acyclic graphs to develop familiarity before proceeding:
+(\citeproc{ref-barrett2021}{Barrett 2021};
+\citeproc{ref-bulbulia2023}{Bulbulia 2023};
 \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024 Chapter 6};
 \citeproc{ref-mcelreath2020}{McElreath 2020 Chapters 5, 6};
 \citeproc{ref-neal2020introduction}{Neal 2020};
-\citeproc{ref-pearl2009a}{Pearl 2009}).
+\citeproc{ref-pearl2009a}{Pearl 2009}). Because directed acyclic graphs
+encode causal assumptions, we will use the terms `structural' and
+`causal' synonymously.
 
 \hyperref[id-sec-1]{Part 1} uses causal diagrams to clarify five
 structural features of measurement-error bias. Understanding measurement
@@ -380,38 +391,60 @@ science, where it casts a long shadow.
 
 \hyperref[id-sec-2]{Part 2} examines structural sources of bias arising
 from attrition and non-response, also known as `right-censoring' or
-simply `censoring'. Censoring may lead to restriction of the sample
-population at baseline. If the sample population at baseline is the
-target sample, censoring may lead to bias.
+simply `censoring'. Censoring may lead to restriction of the target
+population at baseline. If the sample population at baseline is meant to
+be the target population, censoring at baseline may lead to bias.
 
-\hyperref[id-sec-3]{Part 3} considers biases that arise at the start of
+\hyperref[id-sec-3]{Part 3} addresses biases that arise at the start of
 a study when there is a mismatch between the sample population and the
-target population. When there is restriction of the target population in
-the sample population at baseline, this may bias results. I focus on
+target population. When the target population is restricted in the
+sample population at baseline, results may be biased. I focus on
 structural threats to inference when the sample population is (1) too
-restrictive (for example, too WEIRD) and (2) insufficiently restrictive
-(WEIRD sampling leads to bias). Here, we discover that
-population-restriction biases are formally equivalent to measurement
-error bias.
+restrictive (e.g., too WEIRD) and (2) insufficiently restrictive
+(leading to bias from WEIRD sampling). We find that
+population-restriction biases are formally equivalent to certain
+measurement error biases. This structural parallel is crucial because it
+shows that many biases in comparative research can be treated as
+measurement error biases. As these biases are structural---causal in
+nature---they cannot be assessed using the statistical estimation
+methods typically employed by comparative researchers.
 
 \hyperref[id-sec-4]{Part 4} uses Single World Intervention Graphs
-(SWIGs) to clarify ambiguities that arise when using causal directed
-acyclic graphs to address population-restriction and measurement-error
-biases that do not arise from confounding biases.
+(SWIGs) to enhance understanding of measurement-error bias, which is not
+easily conveyed through causal directed acyclic graphs (DAGs). Causal
+DAGs are designed to evaluate assumptions of `no unmeasured
+confounding'. Consequently, they do not fully elucidate
+population-restriction and measurement-error biases that do not stem
+from confounding. Although SWIGs are also built to evaluate `no
+unmeasured confounding', they represent counterfactual dependencies
+directly on a graph. By placing the measurements---or `reporters'---of
+latent realities we aim to quantify, along with the variables that
+perturb these reporters so that the reported quantities differ from the
+latent realities, we can advance the structural understanding of
+measurement problems. This approach better diagnoses threats to
+comparative human science and elucidates their remedies.
 
 The importance of causal inference for comparative research has been
-discussed in several recent studies
+highlighted in several recent studies
 (\citeproc{ref-bulbulia2022}{Bulbulia 2022};
-\citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022}). Here, I focus
-on challenges arising from structural features of (1) measurement error
-bias, (2) target population restriction bias from censoring, and (3)
-target population restriction bias at baseline. Causal directed acyclic
-graphs clarify these recurring structural motifs of measurement error
-bias. Understanding structural commonalities in these biases equips
-investigators to better plan their research.
+\citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022}). In this paper,
+I focus on challenges arising from structural features of (1)
+measurement error bias, (2) target population restriction bias from
+censoring, and (3) target population restriction bias at a study's
+baseline. I clarify that the basis of these biases is causal, not
+statistical, by demonstrating their roots in measurement error bias.
+This understanding is essential because comparative researchers often
+rely on statistical methods, such as configurable scalar and metric
+invariance, to address measurement issues. However, if the problems are
+causal, such methods are inadequate. They fail to clarify the
+dependencies between reality, its measurements, and the contextual and
+cultural features that modify the effects of reality on its measurements
+(\citeproc{ref-vanderweele2022}{VanderWeele 2022a},
+\citeproc{ref-vanderweele2022a}{2022b};
+\citeproc{ref-vanderweele2022b}{VanderWeele and Vansteelandt 2022}).
 
-We begin with a brief overview of causal inference, causal diagrams, and
-our terminology.
+We begin with a brief overview of causal inference, causal directed
+acyclic graphs (causal DAGs), and our terminology.
 
 \subsubsection{What is Causality?}\label{what-is-causality}
 
@@ -1710,7 +1743,7 @@ Table~\ref{tbl-terminologyselectionrestrictionbaseline}
 Moreover, because measurements are causally related to the phenomena
 they record, investigators cannot apply statistical tests to verify
 whether measures are recorded with error
-(\citeproc{ref-vanderweele2022}{VanderWeele 2022};
+(\citeproc{ref-vanderweele2022}{VanderWeele 2022a};
 \citeproc{ref-vansteelandt2022}{Vansteelandt and Dukes 2022b}). Whether
 the phenomena that investigators hope to measure are functionally
 equivalent across cultural settings remains unknown, and can only be
@@ -2433,7 +2466,7 @@ Association}, \textbf{117}(539), 1415--1423.
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
-with examples in r and stan}, CRC press.
+with examples in {R} and {S}tan}, CRC press.
 
 \bibitem[\citeproctext]{ref-morgan2014}
 Morgan, SL, and Winship, C (2014) \emph{Counterfactuals and causal
@@ -2556,7 +2589,13 @@ and Measure. \emph{Epidemiologic Methods}, \textbf{1}(1), 55--82.
 doi:\href{https://doi.org/10.1515/2161-962X.1004}{10.1515/2161-962X.1004}.
 
 \bibitem[\citeproctext]{ref-vanderweele2022}
-VanderWeele, TJ (2022) Constructed measures and causal inference:
+VanderWeele, TJ (2022a) Constructed measures and causal inference:
+Towards a new model of measurement for psychosocial constructs.
+\emph{Epidemiology}, \textbf{33}(1), 141.
+doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
+
+\bibitem[\citeproctext]{ref-vanderweele2022a}
+VanderWeele, TJ (2022b) Constructed measures and causal inference:
 Towards a new model of measurement for psychosocial constructs.
 \emph{Epidemiology}, \textbf{33}(1), 141.
 doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
@@ -2573,6 +2612,12 @@ VanderWeele, TJ, and Robins, JM (2007) Four types of effect
 modification: a classification based on directed acyclic graphs.
 \emph{Epidemiology (Cambridge, Mass.)}, \textbf{18}(5), 561--568.
 doi:\href{https://doi.org/10.1097/EDE.0b013e318127181b}{10.1097/EDE.0b013e318127181b}.
+
+\bibitem[\citeproctext]{ref-vanderweele2022b}
+VanderWeele, TJ, and Vansteelandt, S (2022) A statistical test to reject
+the structural interpretation of a latent factor model. \emph{Journal of
+the Royal Statistical Society Series B: Statistical Methodology},
+\textbf{84}(5), 2032--2054.
 
 \bibitem[\citeproctext]{ref-vansteelandt2022}
 Vansteelandt, S, and Dukes, O (2022b) Assumption-lean inference for
@@ -3204,7 +3249,7 @@ A \coprod Y(\tilde{a})|L
 Causal DAGs do not directly represent counterfactual outcomes. Instead,
 they evaluate whether causality can be identified from hypothetical
 interventions on the variables represented in a graph. Formally, causal
-directed acyclic graphs rely on Judea Pearl's Do-Calculus
+directed acyclic graphs rely on Judea Pearl's do-calculus
 (\citeproc{ref-pearl2009a}{Pearl 2009}), which appeals to the concept of
 an `interventional distribution'. The idea is that any node in a graph
 can be intervened upon. Here, nodes and edges in a causal diagram
